maintainIT2/src/objects/PO_Part__c.object
<CustomObject>
    <description>Purchase Order Parts Lines</description>
    <fields>
        <fullName>Bin_Location__c</fullName>
        <description>Formula Reference to Primary Bin Location</description>
        <formula>Part__r.Primary_Bin_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bin Location</inlineHelpText>
        <label>Primary Bin Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>PO Part Line Comments (up to 255 characters on each line)</description>
        <inlineHelpText>PO Part Line Comments (up to 255 characters on each line)</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Part Description</description>
        <formula>Part__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Part Description</inlineHelpText>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Amt__c</fullName>
        <description>Purchase Order Part Line Extended Amount = Qty * Unit Cost</description>
        <formula>Order_Qty__c *  Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Purchase Order Part Line Extended Amount = Qty * Unit Cost</inlineHelpText>
        <label>Extended Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Receipt_Date__c</fullName>
        <description>Last Receipt Date represents the last date when a PO Part Transaction with a Receipt type was performed against this PO Part Line.  System populated via workflow.  Field security should be set to read only for all user profiles.</description>
        <inlineHelpText>Last Receipt Date represents the last date when a PO Part Transaction with a Receipt type was performed against this PO Part Line.  System populated via workflow.  Field security should be set to read only for all user profiles.</inlineHelpText>
        <label>Last Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Purchase Order Part Line Order Qty.  Measured in the Purchase UOM.</description>
        <inlineHelpText>Purchase Order Part Line Order Qty</inlineHelpText>
        <label>Order Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Status__c</fullName>
        <description>Formula Reference to Purchase Order Status</description>
        <formula>TEXT(Purchase_Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Reference to Purchase Order Status</inlineHelpText>
        <label>PO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Part ID from Part Master</description>
        <inlineHelpText>Part ID from Part Master</inlineHelpText>
        <label>Part</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Part__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Select an &quot;Active&quot; status Part</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>PO Parts</relationshipLabel>
        <relationshipName>PO_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderStatus__c</fullName>
        <description>Formula field represents the status of the Purchase Order. It is being added to avoid the SOQL in the trigger AddPartTransactionForAdditionalPOPart.</description>
        <formula>TEXT(Purchase_Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field represents the status of the Purchase Order.</inlineHelpText>
        <label>PurchaseOrderStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Name__c</fullName>
        <description>Formula Reference to Purchase Order ID</description>
        <formula>Purchase_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Reference to Purchase Order ID</inlineHelpText>
        <label>Purchase Order ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <description>Purchase Order</description>
        <inlineHelpText>Purchase Order</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>PO Parts</relationshipLabel>
        <relationshipName>PO_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Purchase_Pack_Qty__c</fullName>
        <description>Formula Reference to the Purchase Pack Qty</description>
        <formula>Part__r.Reorder_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Reference to the Purchase Pack Qty</inlineHelpText>
        <label>Purchase Pack Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_UOM__c</fullName>
        <description>Formula Reference to Purchase UOM</description>
        <formula>TEXT( Part__r.Purchase_UOM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Reference to Purchase UOM</inlineHelpText>
        <label>Purchase UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_to_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to Receive Parts to Work Order (Receives to Inventory and then Automatically Issues to the Work Order using the specified Part Valuation Method)</description>
        <inlineHelpText>Check this box to Receive Parts to Work Order (Receives to Inventory and then Automatically Issues to the Work Order using the specified Part Valuation Method)</inlineHelpText>
        <label>Receive to Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <description>Purchase Order Parts Line Required Date</description>
        <inlineHelpText>Purchase Order Parts Line Required Date</inlineHelpText>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock_UOM__c</fullName>
        <description>Formula Reference to Stock UOM</description>
        <formula>TEXT( Part__r.Stock_UOM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Reference to Stock UOM</inlineHelpText>
        <label>Stock UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>PO Part Line Unit Cost based on Purchase UOM</description>
        <inlineHelpText>PO Part Line Unit Cost</inlineHelpText>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Part__c</fullName>
        <formula>CASE( Purchase_Order__r.Vendor__c ,  Part__r.Vendor_Preferred__c ,  Part__r.Vendor_Part__c,    Part__r.Vendor_Secondary__c  ,   Part__r.Vendor_Secondary_Part__c ,  Part__r.Vendor_Tertiary__c   ,    Part__r.Vendor_Tertiary_Part__c  , Null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Part #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <description>Warehouse ID</description>
        <formula>Part__r.Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Warehouse ID</inlineHelpText>
        <label>Warehouse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Receive and Automatically Issue to this Work Order</description>
        <inlineHelpText>Related Work Order</inlineHelpText>
        <label>Work Order</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Purchase Parts cannot be linked to Model Work Orders.</errorMessage>
            <filterItems>
                <field>Work_Order__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Model Work Order</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>PO Parts</relationshipLabel>
        <relationshipName>PO_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PO Part</label>
    <nameField>
        <displayFormat>PPL-{0000000}</displayFormat>
        <label>PO Part</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Order_Qty_Non_Negative</fullName>
        <active>true</active>
        <description>Ensures the Order Qty is a Non Negative Value</description>
        <errorConditionFormula>Order_Qty__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Order_Qty__c</errorDisplayField>
        <errorMessage>The Order Qty must be Greater Than or Equal to Zero (0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Part_Part_ID_Change</fullName>
        <active>true</active>
        <description>Ensures that Part ID on the PO Part record cannot be changed.</description>
        <errorConditionFormula>ISCHANGED( Part__c )</errorConditionFormula>
        <errorDisplayField>Part__c</errorDisplayField>
        <errorMessage>The Part ID on a PO Part line cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Part_Unit_Cost_Not_Equal_to_Null</fullName>
        <active>true</active>
        <description>Ensures that the PO Part Unit Cost is Not a Null Value</description>
        <errorConditionFormula>ISNULL( Unit_Cost__c )</errorConditionFormula>
        <errorDisplayField>Unit_Cost__c</errorDisplayField>
        <errorMessage>The Unit Cost on a PO Part line item cannot be a Null Value.  Enter a value of zero (0.00) and the Purchase Price will be updated from the Part record upon save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Status_for_New_PO_Parts</fullName>
        <active>true</active>
        <description>Ensures that the Purchase Order Status IS NOT equal to Canceled, Completed, or Closed before a new PO Part line is added</description>
        <errorConditionFormula>ISNEW() &amp;&amp; (ISPICKVAL( Purchase_Order__r.Status__c , &quot;Canceled&quot;) ||  ISPICKVAL( Purchase_Order__r.Status__c , &quot;Completed&quot;) ||  ISPICKVAL( Purchase_Order__r.Status__c , &quot;Closed&quot;))</errorConditionFormula>
        <errorMessage>You cannot add new Parts to the Purchase Order if the Status is Canceled, Completed, or Closed.  Please create a separate Purchase Order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Status_for_New_PO_Parts_Released</fullName>
        <active>false</active>
        <description>Ensures that the Purchase Order Status IS NOT equal to Released or In Progress before a new PO Part line is added</description>
        <errorConditionFormula>ISNEW() &amp;&amp; (ISPICKVAL( Purchase_Order__r.Status__c , &quot;Released&quot;) ||  ISPICKVAL( Purchase_Order__r.Status__c , &quot;In Progress&quot;))</errorConditionFormula>
        <errorMessage>You cannot add new Parts to the Purchase Order if the Status is Released or In Progress.  Please create a separate Purchase Order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Receive_to_Work_Order</fullName>
        <active>true</active>
        <description>Ensures that there is a Work Order specified if Receive to Work Order is Checked</description>
        <errorConditionFormula>IF( Receive_to_Work_Order__c = True &amp;&amp;  ISBLANK( Work_Order__c ) , True, False)</errorConditionFormula>
        <errorDisplayField>Receive_to_Work_Order__c</errorDisplayField>
        <errorMessage>A Work Order must be specified if you select Receive to Work Order</errorMessage>
    </validationRules>
</CustomObject>